
[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
description = "Example template program written in Rust"
edition = "2018"
homepage = "https://solana.com/"
license = "Apache-2.0"
name = "solana-bpf-helloworld"
repository = "https://github.com/solana-labs/solana"
version = "0.0.1"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.2"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
spl-token = {version = "3.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
crate-type = ["cdylib", "lib"]
name = "helloworld"
